+Added JEI support for the DNA Extractor, it now shows all possible recipes
+Added an JEI information (tutorial) for moss farms
*Moss does no longer destroy any kind of block when spreading
*Moving machine ingredients into every machine has been fixed (JEI)
+The dino scanner debug stick now copies it's finding into the clipboard
*Storage disks no longer show misleading data when not created properly
+Added info to the Growth Serum (JEI)
+Added info to the Cultivator (JEI)
+Added info to the Murals, Paddock signs and Attraction signs (JEI)
+Added info to the pregnancy test (JEI)
+Added info to hatched eggs (JEI)
+Added info to krill and plankton (JEI)
+Added info to the DNA combinator-hybridizer (JEI)
*Fixed incorrect JEI recipe in the DNA Synthesizer concerning the Coelacanth
*Removed incorrect JEI recipe for IndianLilac and Heliconia DNA
*Improved the functionality of the JEI Calcification machine GUI
*Improved the functionality of the JEI DNA Synthesizer GUI
*Improved the functionality of the JEI Embryonic machine GUI
*Improved the functionality of the incubator GUI
*Fixed missing teeth on T. Rex skull
*Fixed crash with Sponge Forge concerning tour rails
*Fixed crashes on dedicated servers due to AI overloads (dinosaur autospawning should be harmless now)
*Fixed hitbox issues with small dinosaurs
+Added config option for dungeon loot
*Coelacanths now successfully spawn in water biomes when autospawn is on
*Reworked helicopter physics
+Added position light to helicopter
+Added particles to helicopter
+Added a warning sound on low health to the helicopter
+Made helicopter crashing when health is too low
+Added HUD gauges to helicopter
*Fixed corals destroying themselves when spreading
*Changed dinosaurs drinking AI to rely more on their mental features
*Fixed wrong T. Rex skull rotation
+Corals now render properly underwater (waterlogged effect)
*Fixed Helicopter graphical glitch in water
*Fixed incompatibility with BOP